--- a/app/views/microposts/_micropost_1.html.erb
+++ b/app/views/microposts/_micropost_1.html.erb
@@ -5,7 +5,7 @@
   <div class="panel-body">
     <h2 class="panel-title"><%= micropost.title %></h2>
     <p class="panel-text"><%= micropost.content %></p>
-    <a href="#" class="btn btn-primary">Read More &rarr;</a>
+    <a href="http://localhost:3000/microposts/show" target="_blank" class="btn btn-primary">Read More &rarr;</a>
   </div>
   <div class="panel-footer text-muted">
     <%= micropost.created_at %> by
