--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,15 +1,23 @@
-<li id="micropost-<%= micropost.id %>">
-  <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
-  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-  <span class="content">
-    <%= micropost.content %>
-    <%= image_tag micropost.picture.url if micropost.picture? %>
-  </span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-    <% if current_user?(micropost.user) %>
-      <%= link_to "delete", micropost, method: :delete,
-                                       data: { confirm: "You sure?" } %>
-    <% end %>
-  </span>
-</li>
+<div class="panel panel-default mb-4">
+  <li id="micropost-<%= micropost.id %>">
+      <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
+      <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
+    <div class="panel-body">
+      <h2 class="panel-title"><i><u><%= micropost.title %></u></i></h2>
+      <p class="panel-text">
+        <%= micropost.content %></br>
+        <%= image_tag micropost.picture.url if micropost.picture? %>
+      </p>
+      <div>
+        <%= link_to "Read More", micropost_path(micropost.id), target: "_blank", class: "btn btn-sm btn-primary" %>
+      </div>
+    </div>
+    <div class="panel-footer text-muted">
+      Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+      <% if current_user?(micropost.user) %>
+        <%= link_to "delete", micropost, method: :delete,
+                                         data: { confirm: "You sure?" } %>
+      <% end %>
+    </div>
+  </li>
+</div>
