--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -9,7 +9,7 @@
       <h1 class="my-4">My blog
       </h1>
 
-      <%= render partial: "micropost_1", collection: @microposts, as: :micropost %>
+      <%= render partial: "micropost", collection: @microposts, as: :micropost %>
 
       <!-- Pagination -->
       <ul class="pagination justify-content-center mb-4">
