--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,14 +5,29 @@
 <%# end %> -->
 
 <!-- Comment with nested comments -->
-<div class="media mb-4">
-  <div class ="media-left">
-    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-  </div>
-  <div class="media-body">
-    <div class="media-heading">
-      <h5 class="mt-0">Commenter Name</h5>
+<div class="panel panel-default mb-4">
+  <li id="comment-<%= comment.id %>">
+    <%= link_to gravatar_for(comment.user, size: 50), comment.user %>
+    <div class="media-body">
+      <div class="media-heading">
+        <h5 class="mt-0">
+          <%= link_to comment.user.name, comment.user %>
+        </h5>
+      </div>
+        <p class="panel-text"><%= comment.content %></p>
+        <div class="panel-footer text-muted">
+          Posted <%= time_ago_in_words(comment.created_at) %> ago.
+          <% if current_user?(comment.user) %>
+            <%= link_to "delete", comment, method: :delete,
+                                           data: { confirm: "You sure?" } %>
+          <% end %>
+        </div>
+        <hr>
+        <%= form_for @comment do |f| %>
+           <%= f.hidden_field :parent_id, value: @comment.parent_id %>
+           <%= f.text_area :content, size: "60x2" %>
+           <%= f.submit "Reply" %>
+        <% end %>
     </div>
-      <%= comment.content %>
-  </div>
+  </li>
 </div>
