--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,122 +1,122 @@
 <!-- Page Content -->
 <div class="container">
 
-  <div class="row">
+    <div class="row">
 
-    <!-- Post Content Column -->
-    <div class="col-lg-8">
+      <!-- Post Content Column -->
+      <div class="col-lg-8">
 
-      <!-- Title -->
-      <h1 class="mt-4"><%= @micropost.title %></h1>
+        <!-- Title -->
+        <h1 class="mt-4"><%= @micropost.title %></h1>
 
-      <hr>
+        <hr>
 
-      <!-- Date/Time -->
-      <p><%= @micropost.created_at %></p>
+        <!-- Date/Time -->
+        <p><%= @micropost.created_at %></p>
 
-      <hr>
+        <hr>
 
-      <!-- Preview Image -->
-      <!-- <img class="img-fluid rounded" src="http://placehold.it/900x300" alt=""> -->
-      <%#= image_tag @micropost.image_url, class: "img-fluid rounded" %>
+        <!-- Preview Image -->
+        <!-- <img class="img-fluid rounded" src="http://placehold.it/900x300" alt=""> -->
+        <%= image_tag @micropost.picture.url if @micropost.picture? %>
 
-      <hr>
+        <hr>
 
-      <!-- Post Content -->
-      <!-- <p class="lead"><%#= @micropost.content %></p> -->
+        <!-- Post Content -->
+        <!-- <p class="lead"><%#= @micropost.content %></p> -->
 
-      <blockquote class="blockquote">
-        <p class="mb-0"><%= @micropost.content %></p>
-        <footer class="blockquote-footer">Someone famous in
-          <cite title="Source Title">Source Title</cite>
-        </footer>
-      </blockquote>
-      <hr>
+        <blockquote class="blockquote">
+          <p class="mb-0"><%= @micropost.content %></p>
+          <footer class="blockquote-footer"><%= link_to gravatar_for(@micropost.user, size: 50), @micropost.user %>
+            <cite title="Source Title"><%= link_to @micropost.user.name, @micropost.user %></cite>
+          </footer>
+        </blockquote>
+        <hr>
 
-      <!-- Comments Form -->
-<!--       <div class="panel panel-default my-4">
-        <h5 class="panel-header">Leave a Comment:</h5>
-        <div class="panel-body">
-          <form>
-            <div class="form-group">
-              <textarea class="form-control" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-      </div> -->
-
-      <%= form_for @comment do |f| %>
-        <%= f.hidden_field :micropost_id, value: @micropost.id %>
-        <%= f.text_area :content, size: "60x2" %>
-        <%= f.submit "Comment" %>
-      <% end %>
-
-      <%= render @comments %>
-
-    <!-- Sidebar Widgets Column -->
-    <div class="col-md-4">
-
-      <!-- Search Widget -->
-      <div class="panel panel-default my-4">
-        <h5 class="panel-header">Search</h5>
-        <div class="panel-body">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-              <button class="btn btn-secondary" type="button">Go!</button>
-            </span>
+        <!-- Comments Form -->
+  <!--       <div class="panel panel-default my-4">
+          <h5 class="panel-header">Leave a Comment:</h5>
+          <div class="panel-body">
+            <form>
+              <div class="form-group">
+                <textarea class="form-control" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
           </div>
-        </div>
-      </div>
+        </div> -->
 
-      <!-- Categories Widget -->
-      <div class="panel panel-default my-4">
-        <h5 class="panel-header">Categories</h5>
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-lg-6">
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="#">Web Design</a>
-                </li>
-                <li>
-                  <a href="#">HTML</a>
-                </li>
-                <li>
-                  <a href="#">Freebies</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a href="#">JavaScript</a>
-                </li>
-                <li>
-                  <a href="#">CSS</a>
-                </li>
-                <li>
-                  <a href="#">Tutorials</a>
-                </li>
-              </ul>
+        <%= form_for @comment do |f| %>
+          <%= f.hidden_field :micropost_id, value: @micropost.id %>
+          <%= f.text_area :content, size: "60x3" %>
+          <%= f.submit "Comment" %>
+        <% end %>
+
+        <%= render @comments %>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+
+        <!-- Search Widget -->
+        <div class="panel panel-default my-4">
+          <h5 class="panel-header">Search</h5>
+          <div class="panel-body">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-secondary" type="button">Go!</button>
+              </span>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Side Widget -->
-      <div class="panel panel-default my-4">
-        <h5 class="panel-header">Side Widget</h5>
-        <div class="panel-body">
-          You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 panel containers!
+        <!-- Categories Widget -->
+        <div class="panel panel-default my-4">
+          <h5 class="panel-header">Categories</h5>
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#">Web Design</a>
+                  </li>
+                  <li>
+                    <a href="#">HTML</a>
+                  </li>
+                  <li>
+                    <a href="#">Freebies</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#">JavaScript</a>
+                  </li>
+                  <li>
+                    <a href="#">CSS</a>
+                  </li>
+                  <li>
+                    <a href="#">Tutorials</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <!-- Side Widget -->
+        <div class="panel panel-default my-4">
+          <h5 class="panel-header">Side Widget</h5>
+          <div class="panel-body">
+            You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 panel containers!
+          </div>
+        </div>
+
       </div>
 
     </div>
-
-  </div>
-  <!-- /.row -->
+    <!-- /.row -->
 
 </div>
 <!-- /.container -->
